--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.3.7",
+    "svg-sprite-loader": "^5.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "element-ui": "^2.3.7"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
